apps/hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  labels:
    app: hello
spec:
  type: ClusterIP
  selector:
    app: hello
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
